build: Completely convert to Kotlin DSL